--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@
 }
 
 canvas {
-    width: 100%;
-    height: 100%;
+    width: 1905px;
+    height: 1070px;
     border: 2px solid black; /* Adds a border to visualize canvas space */
     display: block;  /* Removes any unwanted space below the canvas */
 }
