Color feature added.

--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ canvas {
 #cBtn4 { background-color: #FF8C00; }
 #cBtn5 { background-color: #FF69B4; }
 #cBtn6 { background-color: #40E0D0; }
-#cBtn7 { background-color: #FF6347; }
+#cBtn7 { background-color: #ea47ff; }
 
 
 
