--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ canvas {
   background-color: #40e0d0;
 }
 #cBtn7 {
-  background-color: #ff6347;
+  background-color: #ec04f4;
 }
 
 .color-btns button {
